fix: get started button no longer overlay top navbar, navbar links now jumps to their according sections

--- a/logik-frontend/styles/styles-homepage.css
+++ b/logik-frontend/styles/styles-homepage.css
@@ -9,7 +9,6 @@
 
 .getstarted-button-container {
     position: absolute;
-    z-index: 1;
 }
 
 .getstarted-button-container button {
